examples/test/testpolicy18619.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18619
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key12: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value3
          key10: value15
      podSelector:
        matchLabels:
          key21: value20
          key5: value32
